fixed about section spacing, added section colour support

--- a/portfolio_front/components/desc-box.module.scss
+++ b/portfolio_front/components/desc-box.module.scss
@@ -9,7 +9,7 @@ $x-small: 540px;
   min-height: 340px;
   border: 1px solid var(--main-grey);
   border-radius: 10px;
-  margin: 35px 0.5rem 0 0.5rem;
+  margin: 35px 0.5rem 0;
 
   .descImage {
     width: max-content;
